src/renderer/styles/snipping-tool.less
@import 'theme';

@white: rgb(255, 255, 255, 1);
@version-text-color: rgb(47, 47, 47, 1);
@text-padding: 10px;

body {
  background-color: white;
  margin: 0;
  height: 100%;
  width: 100%;
}

button {
  user-select: none;
  &:focus {
    user-select: none;
    outline: none;
  }
}

.SnippingTool:lang(ja-JP) {
  font-family: @font-family-ja;

  h4 {
    margin: 3px 0;
  }

  .SnippingTool-symphony-section {
    padding-left: 10px;
  }
}

.SnippingTool:lang(fr-FR) {
  .SnippingTool-symphony-section {
    padding-left: 10px;
  }
}

.SnippingTool {
  display: flex;
  flex-direction: column;
  font-family: @font-family;
  height: 100vh;

  header {
    display: flex;
    flex-direction: row;
    justify-content: center;
    text-align: center;
    align-items: center;
    padding: 12px;

    .ActionButton {
      width: 24px;
      height: 24px;
      margin-left: 15px;
      background: white;
      border-radius: 4px;
      cursor: pointer;
      padding: 4px 0;
      border: none;
      box-sizing: border-box;
      border-radius: 4px;
      display: flex;
      justify-content: center;
      align-items: center;
      border: 2px solid white;

      &:first-child {
        margin-left: 0;
      }
    }

    .ClearButton {
      display: block;
      border: 2px solid #7c7f86;
      border-radius: 16px;
      color: #7c7f86;
      font-weight: 600;
      font-size: 12px;
      line-height: 16px;
      text-transform: uppercase;
      cursor: pointer;
      background-color: #ffffff;
      height: 24px;
      width: 68px;
    }

    .DrawActions {
      display: flex;
      flex-direction: row;
      justify-content: center;
      text-align: center;
    }

    .ClearActions {
      display: flex;
      flex: none;
      flex-direction: row;
      justify-content: center;
      text-align: center;
      position: absolute;
      right: 20px;
      align-items: center;
    }
  }

  main {
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    margin: 0;
    height: 100vh;
    width: 100%;
    display: flex;
    justify-content: center;
    background: linear-gradient(
        0deg,
        rgba(255, 255, 255, 0.96),
        rgba(255, 255, 255, 0.96)
      ),
      #525760;

    .imageContainer {
      display: flex;
      align-items: center;
    }
  }

  footer {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    padding-top: 16px;
    padding-bottom: 24px;

    .DoneButton {
      box-shadow: none;
      border: none;
      border-radius: 16px;
      font-size: 0.75rem;
      font-weight: 600;
      text-align: center;
      display: inline-block;
      text-decoration: none;
      line-height: 16px;
      background-color: #008eff;
      color: rgba(255, 255, 255, 0.96);
      cursor: pointer;
      text-transform: uppercase;
      margin-right: 32px;
      height: 32px;
      width: 80px;

      &:focus {
        box-shadow: 0 0 10px rgba(61, 162, 253, 1);
      }
    }
  }
}

.ColorPicker {
  display: flex;
  flex-direction: row;
  margin: 4px;
  align-items: center;
  justify-content: center;
  width: fit-content;
  height: 40px;
  background: #FFFFFF;
  box-shadow: 0px 4px 16px rgba(15, 27, 36, 0.14), 0px 4px 8px rgba(15, 27, 36, 0.26);
  border-radius: 24px;
  }

.EnclosingCircle {
  width: 24px;
  height: 24px;
  background: #FFFFFF;
  border-radius: 50%;
  flex: none;
  order: 0;
  flex-grow: 0;
  margin: 8px;
  cursor: pointer;
  align-items: center;
  justify-content: center;
  display: flex;
}

.ColorDot {
  border-radius: 50%;
  flex: none;
  order: 0;
  flex-grow: 0;
  width: 8px;
  height: 8px;
  background: #000028;
}

